2003-07-14 Jackson Harper <jackson@latitudegeo.com>

	* TypeDef.cs: Emit generic parameters.

2003-06-15 Jackson Harper <jackson@latitudegeo.com>

	* CodeGen.cs: Fix buglet in cache name creating (I will claim this
	was a typo). 
		
2003-06-14 Jackson Harper <jackson@latitudegeo.com>

	* CodeGen.cs: When creating nested types cache their names using
	the parent/type method but emit their short name.
		
2003-06-14 Jackson Harper <jackson@latitudegeo.com>

	* CodeGen.cs: Add methods for setting corflags, subsystem, and corflags.
	
2003-06-14 Jackson Harper <jackson@latitudegeo.com>

	* ITypeRef.cs, PeapiTypeRef.cs, TypeRef.cs: Quick hack for custom
	modified types.
		
2003-06-08 Jackson Harper <jackson@latitudegeo.com>

	* EventDef.cs: Only add one method for addon, fire, other, and
	removeon
		
2003-06-08 Jackson Harper <jackson@latitudegeo.com>

	* TypeDef.cs: Add properties to types.
	* PropertyDef.cs: New file - Implementation of a type property feature
		
2003-06-08 Jackson Harper <jackson@latitudegeo.com>

	* TypeDef.cs: Fix silly null reference bug.
		
2003-06-08 Jackson Harper <jackson@latitudegeo.com>

	* EventDef.cs: New file - An event definition.
	* FeatureAttr.cs: New file - Attributes for features (events and
	properties)
	* MethodRef.cs: Only resolve methods once.
	* TypeDef.cs: Allow Events to be added to types. Also add
	functionality to add generic type parameters to types. The
	actually emission of these type parameters is commented out untill
	I commit my patches to PEAPI and work out the syntax of constraints.
		
2003-05-31 Jackson Harper <jackson@latitudegeo.com>

	* CodeGen.cs: Allow this assembly name to be set.
	* HandlerBlock.cs: Make label fields public so they can be
	accessed in a TryBlocks constructor.
	* MethodDef.cs: Allow random labels to be inserted at the current
	position. These are use for scope blocks.
	* TryBlock.cs: New constructor takes from and to labels as a HandlerBlock
		
2003-05-31 Jackson Harper <jackson@latitudegeo.com>